Fixed spacing issue

--- a/src/sass/components/_components.card.scss
+++ b/src/sass/components/_components.card.scss
@@ -4,6 +4,7 @@
   @media screen and (min-width: 1024px) {
     padding: 0;
     padding-left: $inuit-global-spacing-unit-small;
+    margin-right: $inuit-global-spacing-unit-small;
   }
 }
 
