--- a/src/sass/elements/_elements.body.scss
+++ b/src/sass/elements/_elements.body.scss
@@ -30,6 +30,6 @@ body {
     left: -10vw;
   }
   100% {
-    left: 100vw;
+    left: 110vw;
   }
 }
